kubernetes/platform/databases/pgadmin/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-networking-to-pgadmin
  namespace: pgadmin
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking
  to:
    - group: ""
      kind: Service
      name: pgadmin4
